--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/AndroidManifest.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CS465SubSplitFunctionalPrototypeIndividual">
-        <activity android:name=".GroupSubscription"
+        <activity android:name=".IndividualSubscription"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
