--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/AndroidManifest.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/AndroidManifest.xml
@@ -13,11 +13,23 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity"/>
+<!--        <activity android:name=".AddMemberActivity"/>-->
+        <activity android:name=".AddMemberActivity" android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".CommunityBoardMain" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".DMBoard" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".GroupSubscription" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".IndDMView" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Subscriptions" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Profile" android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
